--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="#673AB7"
-        android:text="@string/toast"
+        android:text="@string/button_label_toast"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,11 +27,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="#673AB7"
-        android:text="@string/button_count"
+        android:text="@string/button_label_count"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:onClick="countUp"/>
+
 
     <TextView
         android:id="@+id/show_count"
@@ -49,4 +50,5 @@
         app:layout_constraintStart_toStartOf="@id/button_count"
         app:layout_constraintTop_toBottomOf="@id/button_toast"
         app:layout_constraintVertical_bias="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
